--- a/contacts-es6/index.html
+++ b/contacts-es6/index.html
@@ -13,6 +13,7 @@
 <script src="assets/js/library.js"></script>
 <script src="assets/js/library-remoting.js"></script>
 <script src="app/app.js"></script>
+<script src="app/test.js"></script>
 <!-- endinject -->
 </body>
 </html>
